# trurl

./: .gitignore
.github/workflows/: makefile.yml  winbuild.yml
winbuild/: CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  build_curl.bat  build_curl.sh  clean.bat  clean.sh  detect_vs.bat  test.bat  test.sh  trurl.vcxproj  vcpkg-configuration.json  vcpkg.json
